--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,14 @@
 
 nav ul a,
 nav .brand-logo {
-  color: #444;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#main_logo {
+  width: 100%;
 }
 
 p {
@@ -39,6 +46,10 @@ p {
 
 .selected-menu-item {
   background-color: lightgray;
+}
+
+.nav_logo {
+  height: 50px;
 }
 
 @media only screen and (max-width: 992px) {
